--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "antd": "^5.4.6",
+    "antd-img-crop": "^4.12.2",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
