--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-webcam": "^7.0.1"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
