--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "antd": "^5.4.6",
     "antd-img-crop": "^4.12.2",
     "axios": "^1.4.0",
