--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd-img-crop": "^4.12.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "html-to-image": "^1.11.11",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
