--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dayjs": "^1.11.7",
     "html-to-image": "^1.11.11",
     "lodash.debounce": "^4.0.8",
+    "nanoid": "^3.3.4",
+    "pouchdb-browser": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -24,7 +26,12 @@
     "react-webcam": "^7.0.1"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@rollup/plugin-commonjs": "^25.0.0",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/node": "^20.1.3",
+    "@types/pouchdb-browser": "^6.1.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -35,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
