--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rollup-plugin-polyfill-node": "^0.12.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-pwa": "^0.14.7"
   }
 }
